# mandelbread

./: .gitignore  Cargo.toml  README.md  bench  fragment.glsl  schematics.ods  todo.md
src/: complex.rs  fractal_complex.rs  fractal_engine.rs  fragment.glsl  gui_wrapper.rs  lib.rs  main.rs  mandelbrot_engine.rs  sfml_engine.rs  sfml_engine_internal.rs  sfml_engine_worker.rs  utils.rs  vertex.glsl
src/engines/: mod.rs  sfml_engine.rs
src/ui/: mod.rs
tests/: gradient.rs  range_mapping.rs
