[package]
name = "mandelbread"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.31.1"
egui = "0.31.1"
rug = "1.27.0"
sfml = "0.24.0"

[profile.release]
debug = "line-tables-only" # Or `true` for full debug info
overflow-checks = false # Disable if not needed for profiling

[build]
rustflags = ["-C", "force-frame-pointers=yes"]
