[package]
name = "mandelbread"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.31.1"
egui = "0.31.1"
rug = "1.27.0"
sfml = "0.24.0"

[dependencies.gmp-mpfr-sys]
version = "1.6"
default-features = false
features = ["mpfr", "use-system-libs"]

[profile.release-prof]
inherits = "release"
debug = true # Essential for detailed call stacks
lto = "fat"
codegen-units = 1

[build]
rustflags = ["-C", "force-frame-pointers=yes"]
